--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -78,7 +78,8 @@ nfpms:
 
 signs:
   - artifacts: package
-    args: ["-u", "{{ .Env.GPG_PRIVATE_KEY }}", "--output", "${signature}", "--detach-sign", "${artifact}"]
+    args: ["-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "--detach-sign", "${artifact}"]
+    stdin: "{{ .Env.GPG_PASSWORD }}"
 
 brews:
   - tap:
