--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -82,7 +82,6 @@ snapcrafts:
     # Build IDs for the builds you want to create snapcraft packages for.
     builds:
       - linux-builds
-    name_template: jp-cli-template
     # The name of the snap.
     name: jp-cli
     # The canonical title of the application, displayed in the software
@@ -100,3 +99,5 @@ snapcrafts:
     # store.
     description: A test CLI built by JP. Trying to publish it to the Snapcraft store!
     license: Apache-2.0
+    grade: devel
+    
