--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -8,7 +8,7 @@ builds:
       - CGO_ENABLED=0
     goos:
       - linux
-    binary: "jp-run"
+    binary: "jp-cli"
 
   - id: windows-builds
     env:
@@ -22,7 +22,7 @@ builds:
       - CGO_ENABLED=0
     goos:
       - darwin
-    binary: "jp-run"
+    binary: "jp-cli"
 
 archives:
   - format: tar.gz
@@ -99,11 +99,6 @@ snapcrafts:
     # store.
     description: A test CLI built by JP. Trying to publish it to the Snapcraft store!
     license: Apache-2.0
-    confinement: classic
     apps:
-      # The name of the app must be the same name as the binary built or the snapcraft name.
-      jp-run:
-        # You can override the command name.
-        #
-        # Default: AppName
-        aliases: [jp-run]
+      jp-cli:
+        plugs: ["network"]
