--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -45,3 +45,4 @@ jobs:
           # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
+          FURY_TOKEN: ${{ secrets.FURY_PUSH_TOKEN }}
